tests/asm/error/header_no_name_1.s
.comment ""
.name

live	%1
